--- a/src/styles/style1.scss
+++ b/src/styles/style1.scss
@@ -1,7 +1,7 @@
-.big_txt-services,
-.big_txt-portfolio,
-.big_txt-about,
-.big_txt-contact {
+.big-txt__services,
+.big-txt__portfolio,
+.big-txt__about,
+.big-txt__contact {
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -10,11 +10,10 @@
     font-size: 141px;
   }
 @media (max-width:599px) {
-    .big_txt-services,
-    .big_txt-portfolio,
-    .big_txt-about,
-    .big_txt-contact{
+    .big-txt__services,
+    .big-txt__portfolio,
+    .big-txt__about,
+    .big-txt__contact{
         font-size: 80px;
-
-}
+  }
 }
