--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -385,11 +385,10 @@ label{
   display: flex;
   justify-content: center;
 }
-.word_for_loerm_main{
+.word_for_lorem_main{
   display: flex;
   justify-content: center;
   margin-top: -50px;
-  font-size: 25px;
 }
 .lorem_content{
   display: block;
