--- a/src/styles/style1.scss
+++ b/src/styles/style1.scss
@@ -1,7 +1,4 @@
-.big-txt__services,
-.big-txt__portfolio,
-.big-txt__about,
-.big-txt__contact {
+.big__txt__services {
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -9,11 +6,42 @@
     text-align: center;
     font-size: 141px;
   }
+.big__txt__portfolio{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  color:#f6f6f6;
+  text-align: center;
+  font-size: 141px;
+}
+.big__txt__about{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  color:#f6f6f6;
+  text-align: center;
+  font-size: 141px;
+}
+.big__txt__contact{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  color:#f6f6f6;
+  text-align: center;
+  font-size: 141px;
+}
+
 @media (max-width:599px) {
-    .big-txt__services,
-    .big-txt__portfolio,
-    .big-txt__about,
-    .big-txt__contact{
+    .big__txt__services{
+      font-size: 80px;
+}
+    .big__txt__portfolio{
+      font-size: 80px;
+}
+    .big__txt__about{
+      font-size: 80px;
+}
+    .big__txt__contact{
         font-size: 80px;
   }
 }
