--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -628,6 +628,9 @@ footer{
     .img1{
       margin-left: 40px;
     }
+    .immm{
+      justify-content: center;
+    }
     .feel_free{
       display: flex;
       justify-content: center;
@@ -693,6 +696,7 @@ footer{
       margin-right: 484px;
     }
     .immm{
+      margin-left: 45px;
       width: 300px;
     }
     hr{
