--- a/src/styles/style1.scss
+++ b/src/styles/style1.scss
@@ -1,4 +1,6 @@
-.big__txt__services {
+
+.divservis-mini-txt { 
+  &__big-txt-services{   
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -6,7 +8,7 @@
     text-align: center;
     font-size: 141px;
   }
-.big__txt__portfolio{
+  &__big-txt-portfolio{   
   margin-top: 50px;
   display: flex;
   justify-content: center;
@@ -14,7 +16,7 @@
   text-align: center;
   font-size: 141px;
 }
-.big__txt__about{
+  &__big-txt-about{    
   margin-top: 50px;
   display: flex;
   justify-content: center;
@@ -22,14 +24,16 @@
   text-align: center;
   font-size: 141px;
 }
-.big__txt__contact{
+&__big-txt-contact{   
   margin-top: 50px;
   display: flex;
   justify-content: center;
   color:#f6f6f6;
   text-align: center;
   font-size: 141px;
-}
+}}
+
+
 
 @media (max-width:599px) {
     .big__txt__services{
