--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,11 +27,13 @@ body{
   max-width: 1100px;
 }
 .img2{
-  margin-left: 50px;
-}
-.img2{
-    border-style: none;
-    float: right;
+  position:  relative;
+  display: flex;
+  align-items: center;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  border-style: none;
+  float: right;
 }
 .geanStick{
   display: flex;
@@ -123,6 +125,8 @@ label{
 }
 /*основний контент*/
 .content{
+  height: 275px;
+  background-color: #fafafa;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -266,11 +270,6 @@ label{
   height: 435px;
   background-color:#2c4755;
   margin-left: -60px;
-}
-.img2{
-  position:  relative;
-  display: flex;
-  align-items: center;
 }
 
 .block3 i{
@@ -497,8 +496,6 @@ a {
   color:#f6f6f6;
 }
 .grayScrean{
-  height: 655px;
-  margin-top: -68px;
   background-color:#fafafa;
 }
 /*подвал сайта*/
@@ -597,13 +594,10 @@ footer{
       margin-top: 50px;
       margin-right:0px;
     }
-    .img2{
-      margin-left: -271px;
-      margin-bottom: -1360px;
+    .grayScrean:nth-last-of-type(2){
+      margin-top: 500px;
     }
-    .portfolio{
-      margin-top: 520px;
-    }
+    
     .feel_free{
       margin-left:0px;
     }
@@ -614,15 +608,11 @@ footer{
     margin-left: -271px;
     margin-bottom: -1360px;
   }
-  .portfolio{
-    margin-top: 520px;
-  }
   .feel_free{
     margin-left:0px;
   }
   .for_mail{
     margin-left: 65px;
-  }
   }
   @media (max-width:799px) {
     .img1{
@@ -649,7 +639,7 @@ footer{
       display: flex;
       flex-direction: column;
     }
-    .portfolio{
+    .grayScrean:nth-last-of-type(2){
       margin-top: 1467px;
     }
     .img2{
@@ -754,3 +744,4 @@ footer{
       margin-left: 535px;
     }
   }
+}
