--- a/src/styles/style1.scss
+++ b/src/styles/style1.scss
@@ -13,7 +13,8 @@
 
 
 @media (max-width:599px) {
-    .big-txt{
-      font-size: 80px;
+    .divservis-mini-txt{
+      &__big-txt{
+      font-size: 50px;
 }
-}
+    }}
