--- a/src/styles/style1.scss
+++ b/src/styles/style1.scss
@@ -4,7 +4,7 @@
     margin-top: 50px;
     display: flex;
     justify-content: center;
-    color:#f6f6f6;
+    color:#eceded;
     text-align: center;
     font-size: 141px;
   }
