--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -205,7 +205,7 @@ label{
   margin-top: 50px;
   margin-bottom: 37px;
 }
-.mini_txt{
+.mini-txt-for-services{
   margin-top: -35px;
   text-align: center;
 }
@@ -265,7 +265,7 @@ label{
   background-color: #f6f6f6;
   height: 330px;
 }
-.black_stick{
+.black-stick{
   width: 95px;
   height: 435px;
   background-color:#2c4755;
@@ -276,13 +276,13 @@ label{
   color: #10cab7;
 }
 
-.flexForTxt{
+.flex-For-Txt{
   display: flex;
 }
-.main_word_list{
+.main-word-list{
   margin-left: 32px;
 }
-.content_list{
+.content-list{
   margin-top: 42px;
   margin-left: 70px;
 }
@@ -314,7 +314,7 @@ label{
     margin-top: 200px;
     background-color:#fafafa
   }
-  .port_wor{
+  .port-wor{
     text-align: center;
   }
 .blocFor{
@@ -354,7 +354,7 @@ label{
 .txt10 h1{
   width: 305px;
 }
-.port_wor{
+.port-wor{
   margin-bottom: 50px;
   margin-top: -50px;
   text-align: center;
@@ -362,7 +362,7 @@ label{
 .prod{
   margin-top: 25px;
 }
-.port_img{
+.portfolio-img{
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -370,7 +370,7 @@ label{
   max-width: 500px;
   float: left;
   }
-.immm{
+.portfolio-img__imeg{
   background-color:#f6f6f6;
   width: 500px;
   height: 250px;
@@ -561,7 +561,7 @@ footer{
       align-items: center;
       flex-direction: column;
     }
-    .content_list{
+    .content-list{
       margin-left: 0px;
     }
     .list__wrapper{
@@ -580,7 +580,7 @@ footer{
     .list-item{
       width: 200px;
     }
-    .port_img{
+    .portfolio-img{
       margin-left: 0px;
     }
     .txtInLost{
@@ -618,7 +618,7 @@ footer{
     .img1{
       margin-left: 40px;
     }
-    .immm{
+    .portfolio-img__imeg{
       justify-content: center;
     }
     .feel_free{
@@ -666,7 +666,7 @@ footer{
     .main-grin_stick{
       display: none;
     }
-    .black_stick{
+    .black-stick{
       display: none;
     }
     .for_mail{
@@ -685,14 +685,14 @@ footer{
       width: 123px;
       margin-right: 484px;
     }
-    .immm{
+    .portfolio-img__imeg{
       margin-left: 45px;
       width: 300px;
     }
     hr{
       width: auto;
     }
-    .port_img{
+    .portfolio-img{
       margin-left: 25px;
   }
   }
@@ -700,7 +700,7 @@ footer{
     .big_txt{
       font-size: 50px;
     }
-    .immm{
+    .portfolio-img__imeg{
       width: 200px;
     }
     .imger img{
@@ -718,7 +718,7 @@ footer{
       width: 200px;
       height: 220px;
     }
-   .port_img{
+   .portfolio-img{
      margin-left: 50px;
    } 
    .links{
@@ -730,7 +730,7 @@ footer{
     .for_mail{
       margin-left: 60px;
     }
-    .port_img{
+    .portfolio-img{
       margin-left: 25px;
     } 
     .create_word{
