--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -594,8 +594,8 @@ footer{
       margin-top: 50px;
       margin-right:0px;
     }
-    .grayScrean:nth-last-of-type(2){
-      margin-top: 500px;
+    .grayScrean:nth-last-of-type(3){
+      margin-top: 530px;
     }
     
     .feel_free{
@@ -624,6 +624,9 @@ footer{
     .feel_free{
       display: flex;
       justify-content: center;
+    }
+    .grayScrean:nth-last-of-type(3){
+      margin-top: 1360px;
     }
     .for_mail{
       display: flex;
