--- a/src/styles/style1.scss
+++ b/src/styles/style1.scss
@@ -1,5 +1,5 @@
 
-.divservis-mini-txt { 
+.divservis-txt { 
   &__big-txt{
     margin-top: 50px;
     display: flex;
@@ -13,7 +13,7 @@
 
 
 @media (max-width:599px) {
-    .divservis-mini-txt{
+    .divservis-txt{
       &__big-txt{
       font-size: 50px;
 }
